# DynamoDb-on-fastAPI-research

./: Dockerfile  docker-compose.yaml  pyproject.toml  start.sh
app/: main.py  repositories.py  schemas.py  settings.py  tables.py
